fixed Integer deprecated warning